<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="store_title_view">Store</string>
    <string name="placeholder_text_view">Placeholder</string>
    <string name="quantity_text_view">Quantity</string>
    <string name="item_title_view">Item</string>
    <string name="name">Name</string>
    <string name="Quantity">Quantity</string>
    <string name="placeholder">placeholder</string>
    <string name="Cancel">Cancel</string>
    <string name="Create">Create</string>
    <string name="price">Price</string>
    <string name="checkBox">Picked Up</string>
    <string name="edit">Edit</string>
</resources>
