<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/dialogFragment"

>

    <EditText
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/nameEditView" android:focusable="auto"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:text="@string/Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/QtyEditView" android:layout_weight="1"
                android:focusable="auto" android:editable="true"/>
        <EditText
                android:text="@string/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/placeholderEditView" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <Button
                android:text="Create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Create" android:layout_weight="1"/>
        <Button
                android:text="@string/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button3" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>